--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -51,7 +51,8 @@ header {
       text-decoration: none;
       text-transform: none;
       &:hover {
-        color: $navColorActive;
+        color: white;
+        text-decoration: none;
       }
     }
   }
