--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -61,8 +61,8 @@ nav ul {
 }
 
 nav a:hover {
-  color: $navColorActive;
-  text-decoration: underline 3px darken($navColorActive, 10%);
+  color: white;
+  text-decoration: underline 3px white;
 }
 // hello
 nav a {
